Updated PDF and moved old version

--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
   <br>
 
   <center>
-  <h1><u>The Isogeny Problems</u></h1>
+  <h1><u>The Isogeny Project</u></h1>
 
   <br>
 
   <blockquote>
       <em>
-        What particular goals will there be toward which
-        the leading cryptographical spirits of coming generations will strive?
+        Here's the full <a target="_blank" href="/pdf/full.pdf">pdf</a>.
       </em>
     </blockquote>
   </center>
@@ -70,14 +69,7 @@
   <br>
 
   <p style="text-align:justify;">
-    Lofty minds are led to strive for the advance of science by nothing more than by laying before
-    them difficult and at the same time useful problems:
-    this page enumerates the foremost unsolved problems in the domain of isogeny-based cryptography.
-    The resolution of any of these profound questions 
-    would mark a monumental advance in our discipline, and the broader cryptographical sciences. 
-    Thus, we hear within us the perpetual call: There is the problem. Seek its solution. 
-    You can find it by pure reason, for in isogeny-based cryptography, as in mathematics, 
-    there is no <i>ignorabimus</i>.
+    Contribute via the <a target="_blank" href="https://github.com/The-Isogeny-Project/The-Isogeny-Project">repo</a>.
   </p>
 
   <br>
