--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <blockquote>
       <em>
-        Here's the full <a target="_blank" href="the-isogeny-project/pdf/full.pdf">pdf</a>.
+        Here's the full <a target="_blank" href="pdf/full.pdf">pdf</a>.
       </em>
     </blockquote>
   </center>
